--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "build/src"
   ],
   "license": "MIT",
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ricohapi/promise-cache-retry.git"
+  },
+  "keywords": [
+    "promise",
+    "cache",
+    "retry"
+  ],
   "scripts": {
     "test": "jest",
     "lint": "gts lint",
